--- a/featured/featured.less
+++ b/featured/featured.less
@@ -2,7 +2,6 @@
   .flex-mixin(column);
   position: relative;
   margin: 0 2rem;
-  border: 1px solid red;
   h1 {
     font-size: 2.5rem;
     color: #4e4c4c;
