--- a/howto-section/howto.less
+++ b/howto-section/howto.less
@@ -1,7 +1,7 @@
 .how-to {
   .flex-mixin(column);
   margin-top: @large-margin;
-  border: 1px solid black;
+  //border: 1px solid black;
   .intro {
     text-align: center;
     padding-bottom: 2.0rem;
@@ -19,7 +19,7 @@
     .flex-mixin(column);
 
     .step {
-      border: 1px solid black;
+      //border: 1px solid black;
       box-shadow: 0 4px 8px 0 #111, 0 6px 20px 0 #fff;
       border-radius: 5%;
       .flex-mixin(column);
